--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -85,6 +85,10 @@ After Running the code, I found out this single regression element model (Height
 
 
 ## Pike
+```{r}
+Pike <- filter(fish, Species == "Pike")
+Pike <- select(Pike, -Species)
+```
 
 ### Best Models
 
